--- a/src/app/cv/card/card.component.html
+++ b/src/app/cv/card/card.component.html
@@ -1,11 +1,11 @@
-<div class="card-container">
+<div class="card-container" *ngIf="cv">
   <div class="card">
     <div class="front">
       <div class="cover">
         <img src="assets/images/rotating_card_thumb2.png" />
       </div>
       <div class="user">
-        <img class="img-circle" src="assets/images/{{ cv?.path }}" />
+        <img class="img-circle" src="assets/images/{{ cv?.path | defaultImage}}" />
       </div>
       <div class="content">
         <div class="main">
