--- a/src/app/cv/item/item.component.html
+++ b/src/app/cv/item/item.component.html
@@ -1,6 +1,6 @@
 <div (click)="sendSelectedCv()">
   <img
-    src="assets/images/{{ cv?.path }}"
+    src="assets/images/{{ cv?.path | defaultImage}}"
     alt="{{ cv?.name }}"
     class="rounded-circle"
     width="50px"
